// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cross-check-session utils: addReviewerToAttendee should add reviewers to an attendee 1`] = `
Array [
  Object {
    "author": "jack",
    "id": "rev-req-1",
    "reviewerOf": Array [
      Object {
        "author": "john",
        "score": null,
      },
      Object {
        "author": "boris-britva",
        "score": null,
      },
    ],
    "score": null,
  },
]
`;

exports[`Cross-check-session utils: addScoreToRequest:  result should match to snapshot 1`] = `
Object {
  "author": "john",
  "id": "rev-req-2",
  "reviewerOf": Array [
    Object {
      "author": "jack",
      "score": 54,
    },
    Object {
      "author": "macKlein",
      "score": 51,
    },
  ],
  "score": 53,
}
`;

exports[`Cross-check-session utils: addScoreToRequest:  should not add a score to an inappropriate request 1`] = `
Object {
  "author": "john",
  "id": "rev-req-2",
  "reviewerOf": Array [
    Object {
      "author": "jack",
      "score": null,
    },
    Object {
      "author": "macKlein",
      "score": null,
    },
  ],
  "score": null,
}
`;

exports[`Cross-check-session utils: addScoreToReviewer:  should not change other data 1`] = `
Object {
  "author": "jack",
  "score": 54,
}
`;

exports[`Cross-check-session utils: createReviewerDistribution: createReviewerDistribution should create reviewer distribution per 1 reviewers amount 1`] = `
Array [
  Object {
    "author": "john",
    "id": "rev-req-2",
    "reviewerOf": Array [
      Object {
        "author": "jack",
        "score": null,
      },
    ],
    "score": null,
  },
  Object {
    "author": "jack",
    "id": "rev-req-1",
    "reviewerOf": Array [
      Object {
        "author": "macKlein",
        "score": null,
      },
    ],
    "score": null,
  },
  Object {
    "author": "macKlein",
    "id": "rev-req-4",
    "reviewerOf": Array [
      Object {
        "author": "boris-britva",
        "score": null,
      },
    ],
    "score": null,
  },
  Object {
    "author": "boris-britva",
    "id": "rev-req-3",
    "reviewerOf": Array [
      Object {
        "author": "rediska",
        "score": null,
      },
    ],
    "score": null,
  },
  Object {
    "author": "rediska",
    "id": "rev-req-5",
    "reviewerOf": Array [
      Object {
        "author": "john",
        "score": null,
      },
    ],
    "score": null,
  },
]
`;

exports[`Cross-check-session utils: createReviewerDistribution: createReviewerDistribution should create reviewer distribution per 2 reviewers amount 1`] = `
Array [
  Object {
    "author": "john",
    "id": "rev-req-2",
    "reviewerOf": Array [
      Object {
        "author": "jack",
        "score": null,
      },
      Object {
        "author": "macKlein",
        "score": null,
      },
    ],
    "score": null,
  },
  Object {
    "author": "jack",
    "id": "rev-req-1",
    "reviewerOf": Array [
      Object {
        "author": "macKlein",
        "score": null,
      },
      Object {
        "author": "boris-britva",
        "score": null,
      },
    ],
    "score": null,
  },
  Object {
    "author": "macKlein",
    "id": "rev-req-4",
    "reviewerOf": Array [
      Object {
        "author": "boris-britva",
        "score": null,
      },
      Object {
        "author": "rediska",
        "score": null,
      },
    ],
    "score": null,
  },
  Object {
    "author": "boris-britva",
    "id": "rev-req-3",
    "reviewerOf": Array [
      Object {
        "author": "rediska",
        "score": null,
      },
      Object {
        "author": "john",
        "score": null,
      },
    ],
    "score": null,
  },
  Object {
    "author": "rediska",
    "id": "rev-req-5",
    "reviewerOf": Array [
      Object {
        "author": "john",
        "score": null,
      },
      Object {
        "author": "jack",
        "score": null,
      },
    ],
    "score": null,
  },
]
`;
